<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickOperation"
    android:padding="20dp">

    <TextView
        android:id="@+id/operation_rg_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/operation_rg_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_add_label" />

        <RadioButton
            android:id="@+id/radio_button_subtract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_subtract_label" />

        <RadioButton
            android:id="@+id/radio_button_multiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_multply_label" />

        <RadioButton
            android:id="@+id/radio_button_divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_divide_label" />
    </RadioGroup>

    <Button
        android:id="@+id/select_pick_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:text="@string/select_button_pick_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_button_pick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel_button_pick_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_pick_button" />
</androidx.constraintlayout.widget.ConstraintLayout>